--- a/client/src/views/home/homepage.html
+++ b/client/src/views/home/homepage.html
@@ -7,44 +7,27 @@
     <title>首页</title>
 </head>
 
-<div class="layui-container home-marin">
+<style>
+    /* 这段样式只是用于演示 */
+    #LAY-component-grid-list .demo-list .layui-card {
+        height: 267px;
+    }
+</style>
 
-    <div class="layui-row layui-col-space10 ">
-        <div class="layui-col-sm4 layui-col-md3  home-first-item">
+<div class="layui-fluid" id="LAY-component-grid-list">
+    <div class="layui-row layui-col-space10 demo-list">
+        <div class="layui-col-sm4 layui-col-md3 layui-col-lg2">
             <!-- 填充内容 -->
-            <div class="layui-card">
-                1222
-            </div>
+            <div class="layui-card">1</div>
         </div>
-        <div class="layui-col-sm4 layui-col-md3  home-first-item">
-            <div class="layui-card">
-                2222
-            </div>
+        <div class="layui-col-sm4 layui-col-md3 layui-col-lg2">
+            <div class="layui-card">2</div>
         </div>
-        <div class="layui-col-sm4 layui-col-md3  home-first-item">
-            <div class="layui-col-sm4 layui-col-md3  home-first-item3">
-                <div class="layui-col-md12">
-                    <div class="layui-card">
-                        2222
-                    </div>
-                </div>
-                <div class="layui-col-md12">
-                    <div class="layui-card">
-                        2222
-                    </div>
-                </div>
-            </div>
-            <div class="layui-col-sm4 layui-col-md3  home-first-item2">
-                <div class="layui-card">
-                    2222
-                </div>
-            </div>
-
+        <div class="layui-col-sm4 layui-col-md3 layui-col-lg2">
+            <div class="layui-card">3</div>
         </div>
-        <div class="layui-col-sm4 layui-col-md3  home-first-item">
-            <div class="layui-card">
-                2222
-            </div>
+        <div class="layui-col-sm4 layui-col-md3 layui-col-lg2">
+            <div class="layui-card">4</div>
         </div>
     </div>
 </div>
