--- a/client/src/style/home/home.css
+++ b/client/src/style/home/home.css
@@ -2,30 +2,119 @@
     margin-top: 20px;
     margin-left: 20px;
     margin-right: 20px;
-    padding: 10px;
-    line-height:200px;
-    background: #00F7DE;
 }
 
 .home-first-item{
     width: 25%;
-    height: max-content;
-    position: relative;
     text-align: center;
+    background: #FFFFFF;
 }
-.home-first-item3{
-    padding-right: 5px;
-    width: 50%;
-    height: 100%;
+
+.home-first-item-all{
+    margin: 10px;
+    text-align: center;
+    background: #9A9A9A;
+    color: #FFFFFF;
 }
 
 .home-first-item11{
     width: 100%;
-    height: 50%;
+    height: 65px;
+    line-height: 65px;
+}
+.home-first-item2{
+    width: 100%;
+    height: 140px;
+    line-height: 140px;
+}
+.home-first-item31{
+    padding-right: 5px;
+    width: 50%;
+}
+.home-first-item311{
+    width: 100%;
+    height: 65px;
+    line-height: 65px;
+    padding-bottom: 5px;
 }
 
-.home-first-item2{
+.home-first-item312{
+    width: 100%;
+    height: 65px;
+    line-height: 65px;
+    padding-top: 5px;
+}
+.home-first-item32{
     padding-left: 5px;
     width: 50%;
     height: 100%;
 }
+.home-first-item321{
+    width: 100%;
+    height: 140px;
+    line-height: 140px;
+}
+
+.home-first-item41{
+    width: 100%;
+}
+.home-first-item42{
+    width: 100%;
+    float: left;
+}
+
+.home-first-item412{
+    width: 94%;
+    height: 65px;
+    line-height: 65px;
+    margin-right: 10px;
+    margin-left: 10px;
+    margin-top: 10px;
+    text-align: center;
+    background: #9A9A9A;
+}
+.home-first-item421{
+    float: left;
+    width: 45%;
+    height: 65px;
+    line-height: 65px;
+    margin-left: 10px;
+    margin-bottom: 10px;
+    text-align: center;
+    color: #FFFFFF;
+    background: #9A9A9A;
+}
+.home-first-item422{
+    float: left;
+    width: 45%;
+    height: 65px;
+    line-height: 65px;
+    margin-right: 10px;
+    margin-left: 10px;
+    text-align: center;
+    color: #FFFFFF;
+    background: #9A9A9A;
+}
+
+.home-second-item-all{
+    float: left;
+    width: 25%;
+    background: white;
+}
+
+.home-second-item{
+    display: inline;
+    float: left;
+    width: 50%;
+    text-align: center;
+    background: #00B7FF;
+}
+
+.home-second-item1{
+    float: left;
+    text-align: center;
+    margin-left: 15px;
+    margin-right: 10px;
+}
+
+
