--- a/client/src/views/home/homepage.html
+++ b/client/src/views/home/homepage.html
@@ -9,25 +9,68 @@
 
 <style>
     /* 这段样式只是用于演示 */
-    #LAY-component-grid-list .demo-list .layui-card {
-        height: 267px;
+    #LAY-component-grid-list1 .demo-list .layui-card {
+        float: left;
+        height: 200px;
+    }
+
+    #LAY-component-grid-list2 .demo-list .layui-card {
+        float: left;
+        height: 200px;
+        width: 25%;
+        display: inline;
     }
 </style>
 
-<div class="layui-fluid" id="LAY-component-grid-list">
-    <div class="layui-row layui-col-space10 demo-list">
-        <div class="layui-col-sm4 layui-col-md3 layui-col-lg2">
-            <!-- 填充内容 -->
-            <div class="layui-card">1</div>
-        </div>
-        <div class="layui-col-sm4 layui-col-md3 layui-col-lg2">
-            <div class="layui-card">2</div>
-        </div>
-        <div class="layui-col-sm4 layui-col-md3 layui-col-lg2">
-            <div class="layui-card">3</div>
-        </div>
-        <div class="layui-col-sm4 layui-col-md3 layui-col-lg2">
-            <div class="layui-card">4</div>
+<div class="home-marin">
+    <div class="layui-fluid" id="LAY-component-grid-list1">
+        <div class="layui-row layui-col-space10 demo-list">
+            <div class="layui-col-sm4 layui-col-md3 home-first-item">
+                <!-- 填充内容 -->
+                <div class="home-first-item-all home-first-item11" ><img src="/stytle/res/bg-none.jpg">设备升级</div>
+                <div class="home-first-item-all home-first-item11">设备接入</div>
+            </div>
+            <div class="layui-col-sm4 layui-col-md3 home-first-item">
+                <div class="home-first-item-all home-first-item2">RS485</div>
+            </div>
+            <div class="layui-col-sm4 layui-col-md3 home-first-item">
+                <div class="layui-col-sm4 layui-col-md3 home-first-item31">
+                    <div class="home-first-item-all home-first-item11">WIFI</div>
+                    <div class="home-first-item-all home-first-item11">历史故障</div>
+                </div>
+                <div class="layui-col-sm4 layui-col-md3 home-first-item32">
+                    <div class="home-first-item-all home-first-item321">向导配置</div>
+                </div>
+            </div>
+            <div class="layui-col-sm4 layui-col-md3 home-first-item">
+                <div class="layui-col-sm4 layui-col-md3 home-first-item41">
+                    <div class="home-first-item-all home-first-item412">网络管理</div>
+                </div>
+                <div class="layui-col-sm4 layui-col-md3 home-first-item42">
+                    <div class=" home-first-item421">MODBUS</div>
+                    <div class=" home-first-item422">电站信息</div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
+
+
+    <div class="layui-fluid" id="LAY-component-grid-list2">
+        <div class="layui-row layui-col-space10 demo-list">
+            <div class="layui-col-sm4 layui-col-md3 home-second-item">
+                <!-- 填充内容 -->
+                <div class="layui-card home-second-item-all home-second-item1">1</div>
+            </div>
+            <div class="layui-col-sm4 layui-col-md3 home-second-item">
+                <div class="layui-card home-second-item-all home-second-item1">2</div>
+            </div>
+            <div class="layui-col-sm4 layui-col-md3 home-second-item">
+                <div class="layui-card home-second-item-all home-second-item1">3</div>
+            </div>
+            <div class="layui-col-sm4 layui-col-md3 home-second-item">
+                <div class="layui-card home-second-item-all home-second-item1">4</div>
+            </div>
+        </div>
+    </div>
+
