--- a/client/src/views/home/homepage.html
+++ b/client/src/views/home/homepage.html
@@ -16,8 +16,8 @@
 
     #LAY-component-grid-list2 .demo-list .layui-card {
         float: left;
-        height: 200px;
-        width: 25%;
+        height: 400px;
+        width: 100%;
         display: inline;
     }
 </style>
@@ -60,16 +60,16 @@
         <div class="layui-row layui-col-space10 demo-list">
             <div class="layui-col-sm4 layui-col-md3 home-second-item">
                 <!-- 填充内容 -->
-                <div class="layui-card home-second-item-all home-second-item1">1</div>
+                <div class=" home-second-item-all home-second-item1">1</div>
             </div>
             <div class="layui-col-sm4 layui-col-md3 home-second-item">
-                <div class="layui-card home-second-item-all home-second-item1">2</div>
+                <div class="home-second-item-all home-second-item2">2</div>
             </div>
             <div class="layui-col-sm4 layui-col-md3 home-second-item">
-                <div class="layui-card home-second-item-all home-second-item1">3</div>
+                <div class="home-second-item-all home-second-item3">3</div>
             </div>
             <div class="layui-col-sm4 layui-col-md3 home-second-item">
-                <div class="layui-card home-second-item-all home-second-item1">4</div>
+                <div class="home-second-item-all home-second-item4">4</div>
             </div>
         </div>
     </div>
