--- a/client/src/views/home/homepage.html
+++ b/client/src/views/home/homepage.html
@@ -58,7 +58,7 @@
 
     <div class="layui-fluid" id="LAY-component-grid-list2">
         <div class="layui-row layui-col-space10 demo-list">
-            <div class="layui-col-sm4 layui-col-md3 home-second-item">
+            <div class="layui-col-sm4 layu，i-col-md3 home-second-item">
                 <!-- 填充内容 -->
                 <div class=" home-second-item-all home-second-item1">1</div>
             </div>
