--- a/client/src/views/home/hometable.html
+++ b/client/src/views/home/hometable.html
@@ -20,7 +20,7 @@
         table.render({
             elem:'#test-table-simple'
             // ,url:'./json/table/user.js'
-            ,url:'http://192.168.43.188:8080/test/inferance/GetDataServlet'
+            ,url:'http://localhost:8080/test/inferance/GetDataServlet'
             ,cellMinWidth:80
             ,cols:[[
                 {field: 'id', width: 80, title: 'ID', sort: true}
