--- a/client/src/views/user/login.html
+++ b/client/src/views/user/login.html
@@ -99,8 +99,8 @@
             //请求登入接口
             // layer.alert(JSON.stringify(obj.field));
             admin.req({
-                url: './json/user/login.js' //实际使用请改成服务端真实接口
-                // url:'http://localhost:8080/123/json.html'
+                // url: './json/user/login.js' //实际使用请改成服务端真实接口
+                url:'http://localhost:8080/test/inferance/login'
                 , data: obj.field
 
                 , done: function (res) {
